# aether

./: .gitignore  LICENSE  docs.bat  management.md  pyproject.toml  readme.md
docs/: aether.html  index.html  search.js
docs/aether/: api.html  call.html  common.html  db.html  models.html  utils.html
docs/aether/api/: generic.html  input.html  model_type.html  request.html  response.html  tool_type.html
docs/aether/call/: _map.html  augment.html  base.html  client.html  config.html  fetch_result_client.html  finetune.html  get_tools_client.html  model.html  openai_client.html  register_model_client.html  registry.html  threaded_call.html  yolo.html
docs/aether/common/: logger.html
docs/aether/db/: basic.html  init_db.html
docs/aether/models/: task.html  tool.html  tool_model.html
docs/aether/utils/: object_match.html  pydantic_utils.html  schema_utils.html
refs/: openai.json  yolo.json
src/aether/: __init__.py
src/aether/api/: input.py  model_type.py  request.py  response.py  tool_type.py
src/aether/call/: __init__.py  _map.py  base.py  client.py  config.py  fetch_result_client.py  get_tools_client.py  model.py  openai_client.py  register_model_client.py  threaded_call.py
src/aether/common/: logger.py
src/aether/db/: basic.py  init_db.py
tests/: full_track_openai.py  full_track_reid.py  full_track_script.py  full_track_stream.py  logo.py  test_init_db.py  test_logger.py  test_model_create.py  test_nested_model_create.py  test_openai_chat.py  test_register_model.py  test_schema_convertion.py  test_yolo_client.py  try_hf_gd.py  try_peft.py  try_peft_dataset.jsonl  try_peft_lora_model.py  try_pose.py  try_pt_yolo.py  try_thread.py  try_validate.py  try_video_stream_api.py  try_video_track.py  try_yolo.py  utils.py
tests/tracker_md/: track.md
(+38 files in other folders)
