[project]
name = "aether"
version = "0.1.0"
description = "a layer between models,data,... and human request"
authors = [
    {name = "壹零",email = "guchengxi1994@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "filetype (>=1.2.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "openai[openai] (>=1.97.1,<2.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "ultralytics[yolo] (==8.3.169)",
    "supervision[yolo] (==0.25.1)",
]

[tool.poetry]
packages = [{include = "aether", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
