[project]
name = "aether"
version = "0.0.1"
description = "a layer between models,data,... and human request"
authors = [{ name = "壹零", email = "guchengxi1994@qq.com" }]
readme = "readme.md"
requires-python = ">=3.10,<4.0"
# autoawq dont support windows
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "filetype (>=1.2.0,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "openai[openai] (>=1.97.1,<2.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "ultralytics[yolo] (==8.3.169)",
    "supervision[yolo] (==0.25.1)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "transformers (>=4.54.1,<5.0.0)",
    "peft[finetune] (>=0.16.0,<0.17.0)",
    "datasets[finetune] (>=4.0.0,<5.0.0)",
    "pandas[finetune] (>=2.3.1,<3.0.0)",
    "opendal (>=0.46.0,<0.47.0)",
    "torchvision (>=0.22.1,<0.23.0)",
]


[tool.poetry]
packages = [{ include = "aether", from = "src" }]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
